app/styles/main.scss
 // Bourbon & Neat
@import '../../bower_components/bourbon/dist/bourbon';
@import '../../bower_components/neat/app/assets/stylesheets/neat';
@import '../../bower_components/bitters/app/assets/stylesheets/_base';

@import 'http://fonts.googleapis.com/css?family=Roboto+Condensed';
@import 'http://fonts.googleapis.com/css?family=Gruppo';
@import 'Pusekatt.css';


$mobile-s: new-breakpoint(min-width 320px 5);
$mobile-m: new-breakpoint(min-width 480px 5);
$mobile-l: new-breakpoint(min-width 768px 12);
$desktop: new-breakpoint(min-width 960px 12);



@mixin if-brightness($amt: 1.1) {
  -o-filter: brightness($amt);
  -ms-filter: brightness($amt);
  -moz-filter: brightness($amt);
  -webkit-filter: brightness($amt);
}

@mixin not-as-shiny {
  color: $white;
  width:120px;
  margin: 10% 0 0 0;
  border: none;
  text-decoration: none;
  border-radius: 0;
  text-shadow: none;
  box-shadow: none;
  font-size: 0.9em;
}


@import 'browse';
@import 'account';
@import 'jqueryui';
@import 'tools';
@import 'profile';
@import 'splash';

/// Reset

li,ul,h1,h2,h3 {
-webkit-margin-before: 0em;
-webkit-margin-after: 0em;
-webkit-margin-start: 0px;
-webkit-margin-end: 0px;
-webkit-padding-start: 0px;
}


///

a {
  color: inherit;
  text-decoration: none;
}

body {
  background: $white;
  font-family: $secondary-font;




  header#main-header.standard{
    height: $std-header-height;
    margin: 0 1% 0 1%;  //masonry puts something in there that requires this; not needed when masonry fails
    text-align: none;
    top: 0;
    border-bottom: 2px solid #ddd;
    width: 98%;

    #header-box-overlay, #header-box, h2 {
      display: none;
    }


    h1.standard {
      display: block;
      color: $darker-orange;

      @include media($mobile-s) {
        font-size: 2.2em;
        font-weight: 300;
        float: left;
        font-family: $primary-font;
        margin: 5px 0 0 10px;
      }
      @include media($mobile-l) {
        font-size: 2.8em;
        margin: 5px 0 0 15px;
      }
    }
    nav#header-nav {
      @include media($mobile-s) {
        position: absolute;
        right: 0;
        top: 8px;
        font-size: 0.9em;
        font-weight: 500;
        text-align: right;

        ul {
          list-style-type: none;
          li {
            display: inherit;
            padding: 0 5px 0 0;
          }
          li .active {
            color: $white;
          }
          li:hover {
            color: $darker-orange;
            text-decoration: underline;
          }
        }

        #header-username {
          position: absolute;
          top: 0;
          right: 0;
          top: 70px;
          padding: 0px 5px 0px 5px;
          background: #333;
          font-size: 1.1em;
          color: #eaeaea;
        }
      }

      @include media($mobile-m) {
        top: 25px;
        ul {
          li {
            padding: 4px 8px 0 8px;
            float: right;
            font-size:1.2em;
          }
        }
        #header-username {
          position: absolute;
          top: 0;
          right: 0;
          top: 10px;
          margin: -34px 7px 0px 0px;
        }
      }
    }
  }




    div#main-container.standard {
      @include media($mobile-s) {
        margin: 180px 0 0 0;
      }
      @include media($mobile-m) {
        margin: 180px 0 0 15px;
      }

      header#pet-header {
        position: fixed;
        z-index: 50;
        margin: 0;
        background: $white;
        width: 100%;
        top: $std-header-height;

          h2 {
            font-size: 4.5em;
            font-family: $primary-font;
            font-weight: 300;
            width: 100%;
            text-align: center;
            opacity: 1;
            z-index: 100;
            text-transform: capitalize;
            color: $black;
            text-shadow: 1px 1px 1px darkorange;
            @media screen and (max-width: 480px){
              font-size: 3.5em;
              margin: 0;
            }

          }

          p#life-marker {
          font-size: 2.0em;
          color: darkorange;
          margin: 0;
          text-align: center;
          margin-top: -35px;
          letter-spacing: 0.20em;
          font-weight: bold;
          }


          #about {
            @include not-as-shiny;
            width: 120px;
            border: none;
            text-decoration: none;
            border-radius: 0;
            text-shadow: none;
            box-shadow: none;
            font-size: 1.0em;
            position: absolute;
            top: 110%;
            left: 50%;
            text-align: center;
            margin: -5px 0 0 -60px;
            text-transform: uppercase;
            color: $black;
            background: $orange;
            padding: 3px 10px 3px 10px;
            border-radius: 5px;
            font-weight: 600;
          }
          #about:hover {
            color: $darker-orange;
            background: $white;
            border: 1px solid $black;
          }
        }
      }


      div#main-container.browse{
        margin: 60px 0 0 15px;
      }
}




div.pic-showcase {

    margin: 100px auto 0 auto;

    .montageSquare {
      @include media($mobile-s) {

        width:100%;
        @include if-brightness(0.9);
        float:left;
        padding:0;
      }
      @include media($mobile-m) {
        width:200px;
        @include if-brightness(0.9);
        float:left;
        padding: 6px;
        // border: solid 4px $black;
      }
      @include media($mobile-l) {


      }
    }



    .flickr {

      // border-left: solid 2px #0063dc;
      // border-top: solid 2px #0063dc;
      // border-right: solid 2px #ff0084;
      // border: solid 4px $flickr;
    }

    iframe.vine-embed-small {
      width:400px;
      html {
        body {
          div.embed-simple {
            position: relative;
            // height: 100%;
            // width: 150%;
 overflow: hidden;
 color: #464646;
 background: #000;

      .embed .video-container {
        position: relative;
 //        height: 100%;
 // width: 100%;

text-align: inherit;


            .embed video {
      height: auto;
      width: auto;
        }
          }
          }

        }
      }
}


    .montageSquare:hover {

      @include if-brightness(1.2);
      background: $orange;


    }

    .flickr:hover {

      @include if-brightness(1.2);
      // @include size(250px 250px);
      // width: 100%;
      // margin:0 6.25% 0 -6.25%;
      // border-top: solid 4px #0063dc;
      // border-left: solid 4px #0063dc;
      // border-right: solid 4px #ff0084;
      // border-bottom: solid 4px #ff0084;
    }
  // }
  // div.pic-container.w2 { width:  120px; }

  // div.pic-container:nth-child(1) {
  //   width: 100px;
  //   }
  //
  div.pic-container:nth-child(1n) {
    // width: 10%;
    // float:left;
    // padding-left:10%;
    }
  div.pic-container:nth-child(2n) {
    // width: 20%;
    // float:right;
    // padding-right:10%;
    }
  }


// form file upload
form#fileupload {
  clear:both;
  z-index:3000;
  span.progress
  {
  	display: block;
  	width: 140px;
  	padding: 2px 5px;
  	margin: 2px 0;
  	border: 1px inset #446;
  	border-radius: 5px;
  }
  .progress.success
  {
	   background: #0c0 none 0 0 no-repeat;
  }

  .progress.failed
  {
	   background: #c00 none 0 0 no-repeat;
  }
  ul#file-list
  {
    padding: 0 0 25px 25px;
  }
}

.display-message {
  display: none;
}

.darkbg {
  background: $white;  // misnomer of sorts
}

body.splash {

  background: url("http://i.imgur.com/cotiNn3.jpg") no-repeat center center fixed;
  background-size: cover;
}


footer {
  position: fixed;
  bottom: 0;
  text-align: center;
  background: #eaeaea;
  width: 100%;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  font-size: 0.9em;
    p{
      -webkit-margin-before: 4px;
      -webkit-margin-after: 4px;
      span {
        padding:0 10px 0 10px;
        margin: 0;
      }
      span#copyright {
      }
      span#version {
        font-style: italic;
        color: $orange;
      }
      span#disclaimer {
        color: $black;
      }
    }
  z-index:6000;
  }

canvas {
  display: none;
}

p.help {
  line-height: 1.2em;
  font-size: 1.1em;
}

